--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <div class="overlay"></div>
     <div class="video"</div>
 
+    <div style="width: 100px, height: 100px, background-color: black, z-index:100"></div>
+
 </div>
 </body>
 </html>
