logo + tagline stuff

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
 	<link rel="stylesheet" type="text/css" href="assets/style.css">
 
+	<link href='https://fonts.googleapis.com/css?family=Oswald:300,700' rel='stylesheet' type='text/css'>
+
 	<script type="text/javascript" src="assets/jquery-1.5.1.js"></script>
 	<script type="text/javascript" src="assets/jquery.videoBG.js"></script>
 	<script type="text/javascript" src="assets/script.js"></script>
@@ -13,10 +15,21 @@
 <body>
 <div class="videoContainer">
     <div class="overlay"></div>
-    <div class="video"</div>
+    <div class="video"></div>
+</div>
 
-    <div style="width: 100px, height: 100px, background-color: black, z-index:100"></div>
+<div class="logo">
+	<!---<img src="cardanos1.png">-->
+</div>
+
+<div class="taglineContainer">
+	<h1 class="tagline">A platform to enhance communication</h1>
+
+	<p class="description">Cardano's Voice is a platform that allows for text-to-voice and voice-to-text communication between loved ones.</p>
+
+	<button type="button" class="button" onclick="">DEMO</button>
 
 </div>
+
 </body>
 </html>
