--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="">
 <head>
   <meta charset="utf-8">
-	<title>Cardanos Voice</title>
-	<link rel="stylesheet" type="text/css" href="assets/style.css">
+  <title>Cardanos Voice</title>
+
+  <link href='https://fonts.googleapis.com/css?family=Oswald:300,700' rel='stylesheet' type='text/css'>
+
+
+  <link rel="stylesheet" type="text/css" href="assets/style.css">
   <script type="text/javascript" src="assets/jquery-1.5.1.js"></script>
   <script type="text/javascript" src="assets/jquery.videoBG.js"></script>
   <script type="text/javascript" src="assets/script.js"></script>
@@ -13,42 +17,47 @@
 </head>
 <body>
   <div class="videoContainer">
-      <div class="overlay"></div>
-      <div class="video"></div>
+    <div class="overlay"></div>
+    <div class="video"></div>
   </div>
-<div class="home">
+  <div class="home">
 
-  <div class="logo"></div>
-  <h1></h1>
-  <p></p>
+    <div class="logo">
+      <!---<img src="cardanos1.png">-->
+    </div>
+
+    <div class="taglineContainer">
+      <h1 class="tagline">A platform to enhance communication</h1>
+
+      <p class="description">Cardano's Voice is a platform that allows for text-to-voice and voice-to-text communication between loved ones.</p>
 
 
-  <form id="signIn" action="">
-    <input id="nickname" placeholder="Nickname" class="required">
-    <select id="language" class="required">
-      <option value="">Languages</option>
-      <option value="eng">English</option>
-      <option value="pt">Portuguese</option>
-      <option value="es">Espanish</option>
-    </select>
-    <button>Send</button>
-  </form>
+    </div>
 
-</div>
-<div class="message-box">
-  <ul id="messages"></ul>
-  <form id="message" action="">
-    <input id="m" autocomplete="off" /><button>Send</button>
-  </form>
-</div>
+
+    <form id="signIn" action="">
+      <input id="nickname" placeholder="Nickname" class="required">
+        <select id="language" class="required">
+          <option value="">Languages</option>
+          <option value=af>Afrikaans</option><option value=sq>Albanian</option><option value=am>Amharic</option><option value=ar>Arabic</option><option value=hy>Armenian</option><option value=az>Azerbaijani</option><option value=eu>Basque</option><option value=be>Belarusian</option><option value=bn>Bengali</option><option value=bs>Bosnian</option><option value=bg>Bulgarian</option><option value=ca>Catalan</option><option value=ceb>Cebuano</option><option value=ny>Chichewa</option><option value=zh-CN>Chinese (Simplified)</option><option value=zh-TW>Chinese (Traditional)</option><option value=co>Corsican</option><option value=hr>Croatian</option><option value=cs>Czech</option><option value=da>Danish</option><option value=nl>Dutch</option><option SELECTED value=en>English</option><option value=eo>Esperanto</option><option value=et>Estonian</option><option value=tl>Filipino</option><option value=fi>Finnish</option><option value=fr>French</option><option value=fy>Frisian</option><option value=gl>Galician</option><option value=ka>Georgian</option><option value=de>German</option><option value=el>Greek</option><option value=gu>Gujarati</option><option value=ht>Haitian Creole</option><option value=ha>Hausa</option><option value=haw>Hawaiian</option><option value=iw>Hebrew</option><option value=hi>Hindi</option><option value=hmn>Hmong</option><option value=hu>Hungarian</option><option value=is>Icelandic</option><option value=ig>Igbo</option><option value=id>Indonesian</option><option value=ga>Irish</option><option value=it>Italian</option><option value=ja>Japanese</option><option value=jw>Javanese</option><option value=kn>Kannada</option><option value=kk>Kazakh</option><option value=km>Khmer</option><option value=ko>Korean</option><option value=ku>Kurdish (Kurmanji)</option><option value=ky>Kyrgyz</option><option value=lo>Lao</option><option value=la>Latin</option><option value=lv>Latvian</option><option value=lt>Lithuanian</option><option value=lb>Luxembourgish</option><option value=mk>Macedonian</option><option value=mg>Malagasy</option><option value=ms>Malay</option><option value=ml>Malayalam</option><option value=mt>Maltese</option><option value=mi>Maori</option><option value=mr>Marathi</option><option value=mn>Mongolian</option><option value=my>Myanmar (Burmese)</option><option value=ne>Nepali</option><option value=no>Norwegian</option><option value=ps>Pashto</option><option value=fa>Persian</option><option value=pl>Polish</option><option value=pt>Portuguese</option><option value=pa>Punjabi</option><option value=ro>Romanian</option><option value=ru>Russian</option><option value=sm>Samoan</option><option value=gd>Scots Gaelic</option><option value=sr>Serbian</option><option value=st>Sesotho</option><option value=sn>Shona</option><option value=sd>Sindhi</option><option value=si>Sinhala</option><option value=sk>Slovak</option><option value=sl>Slovenian</option><option value=so>Somali</option><option value=es>Spanish</option><option value=su>Sundanese</option><option value=sw>Swahili</option><option value=sv>Swedish</option><option value=tg>Tajik</option><option value=ta>Tamil</option><option value=te>Telugu</option><option value=th>Thai</option><option value=tr>Turkish</option><option value=uk>Ukrainian</option><option value=ur>Urdu</option><option value=uz>Uzbek</option><option value=vi>Vietnamese</option><option value=cy>Welsh</option>
+        </select>
+
+      <button class="btn button highlight-button btn-large">Chat now</button>
+    </form>
+
+  </div>
+  <div class="message-box">
+    <ul id="messages"></ul>
+    <form id="message" action="">
+      <input id="m" autocomplete="off" /><button>Send</button>
+    </form>
+  </div>
 
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
     var socket = io();
-
     $('.message-box').hide();
-
     $('#signIn').submit(function(){
       socket.emit('nickname', $('#nickname').val());
       socket.emit('language', $('#language').val());
@@ -56,17 +65,14 @@
       $('.message-box').show();
       return false;
     });
-
     $('#message').submit(function(){
       socket.emit('chat message', $('#m').val());
       $('#m').val('');
       return false;
     });
-
     socket.on('chat message', function(msg){
-      $('#messages').append($('<li>').text(msg));
+      $('#messages').append($("<li>").text(msg));
     });
-
   </script>
 
 </body>
