Fixing send button on my browser

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <div class="message-box">
     <ul id="messages"></ul>
     <form id="message" action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
+      <input id="m" autocomplete="off" /><button style="float: right">Send</button>
     </form>
   </div>
 
