--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
   <script type="text/javascript" src="assets/jquery-1.5.1.js"></script>
   <script type="text/javascript" src="assets/jquery.videoBG.js"></script>
   <script type="text/javascript" src="assets/script.js"></script>
-
-
-
+  <link href="assets/jquery.cssemoticons.css" media="screen" rel="stylesheet" type="text/css" />
+  <script src="assets/jquery-1.4.2.min.js" type="text/javascript"></script>
+  <script src="assets/jquery.cssemoticons.min.js" type="text/javascript"></script>
+  
 </head>
 <body>
   <div class="videoContainer">
@@ -56,6 +57,9 @@
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
+    $(document).ready(function(){
+      $('.emoji').emoticonize();
+    });
     var socket = io();
     $('.message-box').hide();
     $('#signIn').submit(function(){
@@ -72,7 +76,7 @@
     });
     socket.on('chat message', function(msg){
       msgtext = msg.text;
-      $('#messages').append($('<li>').css({"background": msg.bgcolor, "color": msg.txtcolor}).text(msgtext));
+      $('#messages').append($('<li class="emoji">').css({"background": msg.bgcolor, "color": msg.txtcolor}).text(msgtext).emoticonize());
     });
   </script>
 
